--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lastest",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://VietCardanoCommunity.github.io/cardanodoc"
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -12,7 +13,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "deploy": "docusaurus deploy",
+    "build": "docusaurus build"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
